--- a/tmpl/main.html
+++ b/tmpl/main.html
@@ -3,11 +3,12 @@
 <!-- /tmpl/main.html - main template of page-->
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="{style}">
     <meta charset="UTF-8">
     <title>{title}</title>
 </head>
 <body>
-<table width="90%" border="1">
+<table width="90%" border="2">
     <tr>
         <td rowspan="2" width="30%">{menu}</td>
         <td>{nav_bar}</td>
